WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254588
[WGSL] Overload resolution shoudln't assume we can materialize all variables
https://bugs.webkit.org/show_bug.cgi?id=254588
Summary
[WGSL] Overload resolution shoudln't assume we can materialize all variables
Tadeu Zagallo
Reported
2023-03-28 07:44:14 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-03-28 07:44:30 PDT
<
rdar://problem/107316646
>
Tadeu Zagallo
Comment 2
2023-03-28 07:49:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12051
EWS
Comment 3
2023-03-30 04:07:02 PDT
Committed
262323@main
(9668cecef552): <
https://commits.webkit.org/262323@main
> Reviewed commits have been landed. Closing PR #12051 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug