[WGSL] Overload resolution shouldn't assume we can materialize all variables https://bugs.webkit.org/show_bug.cgi?id=254588 rdar://problem/107316646

Reviewed by Myles C. Maxfield.

Some overload candidates require explicitly instantiating type variables, and
if no explicit instantiation is given we'll fail to materialize the variable.
In this case, we should reject the overload candidate instead of failing an
assertion and crashing.

* Source/WebGPU/WGSL/Overload.cpp:
(WGSL:: const):
(WGSL::OverloadResolver::considerCandidate):
* Source/WebGPU/WGSL/TypeDeclarations.rb:

Canonical link: https://commits.webkit.org/262323@main